pulled in intellij idea. added many things in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,7 @@ app/src/main/java/*
 !app/src/main/java/random
 app/src/main/java/random/*
 !app/src/main/java/random/calculate.java
-
+# Intellij IDEA generated files
+/.idea/
+/out/
+/Bday.iml
